--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                         <div class="card shadow-sm">
                             <img src="img/wireframe-aspect_ratio-16-9.png" class="card-img-top" alt="describa la imagen" />
                             <div class="card-body">
-                            <a href="https://www.conaf.cl/conaf-reitera-llamado-a-no-ingresar-con-mascotas-a-parques-nacionales-tras-muerte-de-zorro-culpeo/">Artículo “CONAF reitera llamado a no ingresar con mascotas a parques nacionales tras muerte de zorro culpeo” (2019)</a> &bull;
+                            <p class="card-text"><a href="https://www.conaf.cl/conaf-reitera-llamado-a-no-ingresar-con-mascotas-a-parques-nacionales-tras-muerte-de-zorro-culpeo/">Artículo “CONAF reitera llamado a no ingresar con mascotas a parques nacionales tras muerte de zorro culpeo” (2019)</a></p>
                             </div>
                         </div>
                     </div>
