--- a/skeleton.html
+++ b/skeleton.html
@@ -50,7 +50,8 @@
                             <p>
                                La Normativa para el manejo de perros y otras mascotas en las Áreas Silvestres Protegidas, administradas por CONAF, es un documento que busca regular la forma en que el personal de la institución, así como los visitantes, poblaciones humanas aledañas y demás personas e instituciones relacionadas con el tema, deben conducirse al interior  de cualquier parque nacional, reserva nacional o monumento natural y otras áreas protegidas, en relación a la presencia y tenencia de animales domésticos (perros, gatos  y otros).
                             </p>
-                            <p class="small d-none d-lg-block">
+                           <p class="small d-none d-lg-block">
+                                En YouTube busquen el botón de compartir. Al presionarlo, aparece una ventana. Seleccionen la opción "insertar". Copien el código. Luego reemplacen en ancho y alto por la clase de Bootstrap.
                             </p>
                         </div>
                     </div>
@@ -61,7 +62,7 @@
                 <div class="container">
                     <div class="row py-5 align-items-center">
                         <div class="col-md-6 col-lg-7">
-                            <svg loading="lazy" class="img-fluid bg-light" xmlns="img/Gráfico (módulo digital)_Mesa de trabajo 1.svg" alt="Gráfico de porcentaje de áreas silvestres amenazadas por perros" />
+                            <svg loading="lazy" class="img-fluid bg-light" xmlns="img/Gráfico (módulo digital)_Mesa de trabajo 1.svg" alt="Gráfico de porcentaje de áreas silvestres amenazadas por perros" />
                         </div>
                         <div class="col-md-6 col-lg-5 p-4">
                             <h3><i data-feather="circle"></i> Animales domésticos pueden llegar a afectar gravemente a especies de áreas protegidas de nuestro país.</h3>
@@ -69,6 +70,7 @@
                             Existe tanto un peligro en los instintos que tiene el animal como el orinar o defecar en distintas plantas y los ataques a otros animales y sus hábitats seguros, como un riesgo de transmisión de enfermedades letales. Es de suma importancia concientizar sobre problemáticas cotidianas para comenzar a generar una conversación a nivel individual y comunitario. Este es un tema poco conocido por la mayoría de los dueños de perros y que sigue siendo un hecho que ocurre diariamente.
                             </p>
                             <p class="small d-none d-lg-block">
+                                En YouTube busquen el botón de compartir. Al presionarlo, aparece una ventana. Seleccionen la opción "insertar". Copien el código. Luego reemplacen en ancho y alto por la clase de Bootstrap.
                             </p>
                         </div>
                     </div>
@@ -87,7 +89,7 @@
                                 Canvas también nos permite dibujar con texto. Pero aquí tenemos un elemento de HTML cuyas dimensiones no se ajustan automáticamente, y dentro del cual se programan gráficos tipo bitmap, generalmente, con JavaScript.
                             </p>
                             <p class="small d-none d-lg-block">
-                                En este caso, se recomienda utilizar <a href="https://p5js.org/es/">p5.js</a>, una biblioteca de JavaScript que reformula Processing (que está basado en Java), y les puede permitir introducirse a un lenguaje de programación.
+                                En YouTube busquen el botón de compartir. Al presionarlo, aparece una ventana. Seleccionen la opción "insertar". Copien el código. Luego reemplacen en ancho y alto por la clase de Bootstrap.
                             </p>
                         </div>
                     </div>
